--- a/src/mainStructure.css
+++ b/src/mainStructure.css
@@ -1,8 +1,8 @@
 .main-container {
   display: flex;
   justify-content: center;
-  padding: 0 30px;
-  height: calc(100vh - 80px);
+  padding: 0 30px 30px;
+  height: calc(100vh - 50px);
 }
 
 header > h2 {
@@ -10,11 +10,6 @@ header > h2 {
   height: 50px;
   padding: 10px 30px;
   position: relative;
-}
-
-footer {
-  color: white;
-  padding: 5px 30px 0px;
 }
 
 header > h2:after {
